# PF-Lab-Project-25-Python-API

./: .gitignore  agent.py  app.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt  test.rest  vercel.json
api/: index.py
src/: agent.py  app.py  prompts.py
src/db/: crud.py  index.py  models.py  schemas.py
