[project]
name = "python-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "langchain>=1.0.3",
    "langchain-anthropic>=1.0.1",
    "langchain-core>=1.0.3",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
